fixing overflow

--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@ html, body{
   scroll-behavior: smooth;
   background-color: #1B2223;
   font-family: Arial;
+  overflow-x: auto;
 }
 
 .main{
